--- a/.gitignore
+++ b/.gitignore
@@ -4,32 +4,31 @@ doxygen/
 ## Eclipse
 #################
 
-# maybe activate later
-#*.pydevproject
-#.project
-#.metadata
-#bin/
-#tmp/
-#*.tmp
-#*.bak
-#*.swp
-#*~.nib
-#local.properties
-#.classpath
-#.settings/
-#.loadpath
+*.pydevproject
+.project
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
 
 # External tool builders
-#.externalToolBuilders/
+.externalToolBuilders/
 
 # Locally stored "Eclipse launch configurations"
-#*.launch
+*.launch
 
 # CDT-specific
-#.cproject
+.cproject
 
 # PDT-specific
-#.buildpath
+.buildpath
 
 
 #################
