controls working partially

--- a/carduinowebdroid/WebContent/WEB-INF/web.xml
+++ b/carduinowebdroid/WebContent/WEB-INF/web.xml
@@ -3,19 +3,11 @@
 	version="3.0">
 	<display-name>Carduinowebdroid</display-name>
 	<servlet>
-		<servlet-name>ChatServlet</servlet-name>
-		<servlet-class>de.carduinodroid.ChatServlet</servlet-class>
+		<servlet-name>WebSocketServlet</servlet-name>
+		<servlet-class>de.carduinodroid.MyWebSocketServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>ChatServlet</servlet-name>
-		<url-pattern>/chat</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<servlet-name>ControllerServlet</servlet-name>
-		<servlet-class>de.carduinodroid.ControllerServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>ControllerServlet</servlet-name>
-		<url-pattern>/controller</url-pattern>
+		<servlet-name>WebSocketServlet</servlet-name>
+		<url-pattern>/websocket</url-pattern>
 	</servlet-mapping>
 </web-app>
