--- a/carduinowebdroid/WebContent/WEB-INF/web.xml
+++ b/carduinowebdroid/WebContent/WEB-INF/web.xml
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-  <display-name>Carduinowebdroid</display-name>
-  <servlet>
-    <servlet-name>WebSocketServlet</servlet-name>
-    <servlet-class>de.carduinodroid.MyWebSocketServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>WebSocketServlet</servlet-name>
-    <url-pattern>/websocket</url-pattern>
-  </servlet-mapping>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	version="3.0">
+	<display-name>Carduinowebdroid</display-name>
+	<servlet>
+		<servlet-name>WebSocketServlet</servlet-name>
+		<servlet-class>de.carduinodroid.MyWebSocketServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>WebSocketServlet</servlet-name>
+		<url-pattern>/websocket</url-pattern>
+	</servlet-mapping>
 </web-app>
